* "to_sjPlot" to convert data frames imported with the "haven" package to a more sjPlot-friendly format.
* "to_fac" to convert (numeric or atomic) variables to factors, but keeps value and variable labels. Useful alternative to "as.factor", when data has been imported from SPSS (e.g. with "read_spss").

Changes to functions:
* "sjt.lm" now also prints multiple fitted models with different predictors in each model (e.g. when comparing stepwise regression). See examples in "?sjt.lm".
* Added parameter "group.pred" in "sjt.lm" and "sjt.glm" to automatically group table rows with factor levels of same factor.
* Improved "set_var_labels", "get_var_labels", "set_val_labels" and "get_val_labels" to cope with "haven" package data structure.
* Improved "view_spss" function (former "sji.viewSPSS").
* Improved automatic label extraction for "sjp.lm", "sjt.lm", "sjp.glm" and "sjt.glm".
* Improved pre-set theme "538" in "sjp.setTheme".
* Added further pre-set themes to "sjp.setTheme".
* Minor improvements in "sjp.lm" with "type='ma'".

Bug fixes:
* Fixed bug in "sjt.itemanalysis".
* Fixed bug in "sji.setValueLabels".
* Fixed bug in "sjt.frq" with string-variables that contained a larger amount of unique values including "NA"-values, when parameter "skipZeroRows" was set to "auto" (default).
* Minor bug fixes in "sjp.lm" with "type='ma'".
* "weight"" should now also include "NA"s.


Version 1.6.9
------------------------------------------------------------------------------
New functions:
* Added new functions "sjd.norm", "sjd.chisq", "sjd.f" and "sjd.t" to plot distribution curves, optionally with shaded areas indicating the p-level area.

Changes to functions:
* Plotting single predictors of linear models (type = "pred" in function "sjp.lm") now also supports plotting interaction terms and factor levels. Needs parameter "x=TRUE" in lm-call to work.