@@ -47,6 +47,7 @@ In case you want / have to cite my package, please use `citation('sjPlot')` for 
 * `to_fac` to convert (numeric or atomic) variables to factors, but keeps value and variable labels. Useful alternative to `as.factor`, when data has been imported from SPSS (e.g. with `read_spss`).
 
 #### Changes to functions
+* `read_spss` (former `sji.SPSS`) now supports reading data via `haven`'s read-function (see parameter `option`).
 * `sjt.lm` now also prints multiple fitted models with different predictors in each model (e.g. when comparing stepwise regression). See examples in `?sjt.lm`.
 * Added parameter `group.pred` in `sjt.lm` and `sjt.glm` to automatically group table rows with factor levels of same factor.
 * Improved `set_var_labels`, `get_var_labels`, `set_val_labels` and `get_val_labels` to cope with `haven` package data structure.
